--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ mode        : selfcontained # {standalone, draft}
 knit        : slidify::knit2slides
 github      :
   user: hballinas
-  repo: Developing-Data-Products/Week_4
+  repo: YieldCurve/
 
 --- .class #id 
 
